--- a/.pylintrc
+++ b/.pylintrc
@@ -2,4 +2,4 @@
 max-line-length=88
 
 [MESSAGES CONTROL]
-disable=missing-docstring,too-many-ancestors,too-few-public-methods,bad-continuation,no-else-return,no-member,attribute-defined-outside-init,no-self-use,similarities,import-outside-toplevel,cyclic-import,no-member
+disable=missing-docstring,too-many-ancestors,too-few-public-methods,bad-continuation,no-else-return,no-member,attribute-defined-outside-init,no-self-use,similarities,import-outside-toplevel,cyclic-import,no-member,no-else-raise,too-many-instance-attributes,too-many-arguments
