--- a/tests/cassettes/test_documents/TestDocument.test_getattr_method[get_small_image].yaml
+++ b/tests/cassettes/test_documents/TestDocument.test_getattr_method[get_small_image].yaml
@@ -11,11 +11,11 @@ interactions:
       User-Agent:
       - python-documentcloud2
     method: GET
-    uri: http://api.dev.documentcloud.org/files/documents/10000416/pages/test-p1-small.gif
+    uri: http://api.dev.documentcloud.org/files/documents/10000478/pages/test-p1-small.gif
   response:
     body:
       string: "<!DOCTYPE html>\n<html lang=\"en\">\n<head>\n  <meta http-equiv=\"content-type\"
-        content=\"text/html; charset=utf-8\">\n  <title>Page not found at /files/documents/10000416/pages/test-p1-small.gif</title>\n
+        content=\"text/html; charset=utf-8\">\n  <title>Page not found at /files/documents/10000478/pages/test-p1-small.gif</title>\n
         \ <meta name=\"robots\" content=\"NONE,NOARCHIVE\">\n  <style type=\"text/css\">\n
         \   html * { padding:0; margin:0; }\n    body * { padding:10px 20px; }\n    body
         * * { padding:0; }\n    body { font:small sans-serif; background:#eee; color:#000;
@@ -29,7 +29,7 @@ interactions:
         0px none; }\n  </style>\n</head>\n<body>\n  <div id=\"summary\">\n    <h1>Page
         not found <span>(404)</span></h1>\n    <table class=\"meta\">\n      <tr>\n
         \       <th>Request Method:</th>\n        <td>GET</td>\n      </tr>\n      <tr>\n
-        \       <th>Request URL:</th>\n        <td>http://api.dev.documentcloud.org/files/documents/10000416/pages/test-p1-small.gif</td>\n
+        \       <th>Request URL:</th>\n        <td>http://api.dev.documentcloud.org/files/documents/10000478/pages/test-p1-small.gif</td>\n
         \     </tr>\n      \n      <tr>\n        <th>Raised by:</th>\n        <td>documentcloud.core.views.FileServer</td>\n
         \     </tr>\n      \n    </table>\n  </div>\n  <div id=\"info\">\n    \n      <p>No
         Document matches the given query.</p>\n    \n  </div>\n\n  <div id=\"explanation\">\n
@@ -39,7 +39,7 @@ interactions:
         rel=\"stylesheet\" href=\"/static/debug_toolbar/css/print.css\" type=\"text/css\"
         media=\"print\">\n<link rel=\"stylesheet\" href=\"/static/debug_toolbar/css/toolbar.css\"
         type=\"text/css\">\n<script src=\"/static/debug_toolbar/js/toolbar.js\" defer></script>\n<div
-        id=\"djDebug\" class=\"djdt-hidden\" dir=\"ltr\"\n     \n     data-store-id=\"2364bfc2034f4cdeb01c79631cd3ed50\"\n
+        id=\"djDebug\" class=\"djdt-hidden\" dir=\"ltr\"\n     \n     data-store-id=\"706a4273de9c45c398c20ef3a73bc57a\"\n
         \    data-render-panel-url=\"/__debug__/render_panel/\"\n     \n     >\n\t<div
         class=\"djdt-hidden\" id=\"djDebugToolbar\">\n\t\t<ul id=\"djDebugPanelList\">\n\t\t\t\n\t\t\t<li><a
         id=\"djHideToolBarButton\" href=\"#\" title=\"Hide toolbar\">Hide &#187;</a></li>\n\t\t\t\n\t\t\t\n\t\t\t\t<li
@@ -50,7 +50,7 @@ interactions:
         class=\"djDebugPanelButton\">\n\t\t\t\t\t<input type=\"checkbox\" data-cookie=\"djdtTimerPanel\"
         checked title=\"Disable for next and successive requests\">\n\t\t\t\t\t\n\t\t\t\t\t\t<a
         href=\"#\" title=\"Time\" class=\"TimerPanel\">\n\t\t\t\t\t\n\t\t\t\t\tTime\n\t\t\t\t\t\n\t\t\t\t\t\n\t\t\t\t\t\t<br><small>CPU:
-        94.83ms (98.39ms)</small>\n\t\t\t\t\t\n\t\t\t\t\t\n\t\t\t\t\t\n\t\t\t\t\t\t</a>\n\t\t\t\t\t\n\t\t\t\t</li>\n\t\t\t\n\t\t\t\t<li
+        87.53ms (91.07ms)</small>\n\t\t\t\t\t\n\t\t\t\t\t\n\t\t\t\t\t\n\t\t\t\t\t\t</a>\n\t\t\t\t\t\n\t\t\t\t</li>\n\t\t\t\n\t\t\t\t<li
         class=\"djDebugPanelButton\">\n\t\t\t\t\t<input type=\"checkbox\" data-cookie=\"djdtSettingsPanel\"
         checked title=\"Disable for next and successive requests\">\n\t\t\t\t\t\n\t\t\t\t\t\t<a
         href=\"#\" title=\"Settings from &lt;code&gt;config.settings.local&lt;/code&gt;\"
@@ -64,7 +64,7 @@ interactions:
         class=\"djDebugPanelButton\">\n\t\t\t\t\t<input type=\"checkbox\" data-cookie=\"djdtSQLPanel\"
         checked title=\"Disable for next and successive requests\">\n\t\t\t\t\t\n\t\t\t\t\t\t<a
         href=\"#\" title=\"SQL queries from 1 connection\" class=\"SQLPanel\">\n\t\t\t\t\t\n\t\t\t\t\tSQL\n\t\t\t\t\t\n\t\t\t\t\t\n\t\t\t\t\t\t<br><small>1
-        query in 1.52ms</small>\n\t\t\t\t\t\n\t\t\t\t\t\n\t\t\t\t\t\n\t\t\t\t\t\t</a>\n\t\t\t\t\t\n\t\t\t\t</li>\n\t\t\t\n\t\t\t\t<li
+        query in 1.64ms</small>\n\t\t\t\t\t\n\t\t\t\t\t\n\t\t\t\t\t\n\t\t\t\t\t\t</a>\n\t\t\t\t\t\n\t\t\t\t</li>\n\t\t\t\n\t\t\t\t<li
         class=\"djDebugPanelButton\">\n\t\t\t\t\t<input type=\"checkbox\" data-cookie=\"djdtStaticFilesPanel\"
         checked title=\"Disable for next and successive requests\">\n\t\t\t\t\t\n\t\t\t\t\t\t<a
         href=\"#\" title=\"Static files (193 found, 0 used)\" class=\"StaticFilesPanel\">\n\t\t\t\t\t\n\t\t\t\t\tStatic
@@ -153,13 +153,13 @@ interactions:
       Content-Type:
       - text/html
       Date:
-      - Tue, 09 Jun 2020 14:20:45 GMT
+      - Tue, 09 Jun 2020 16:12:44 GMT
       Server:
       - nginx/1.15.1
       Server-Timing:
-      - TimerPanel_utime=94.83299999999417; "User CPU time", TimerPanel_stime=0.0;
-        "System CPU time", TimerPanel_total=94.83299999999417; "Total CPU time", TimerPanel_total_time=98.38652610778809;
-        "Elapsed time", SQLPanel_sql_time=1.5196800231933594; "SQL 1 queries", CachePanel_total_time=0;
+      - TimerPanel_utime=77.6180000000295; "User CPU time", TimerPanel_stime=9.907999999995809;
+        "System CPU time", TimerPanel_total=87.5260000000253; "Total CPU time", TimerPanel_total_time=91.07232093811035;
+        "Elapsed time", SQLPanel_sql_time=1.6422271728515625; "SQL 1 queries", CachePanel_total_time=0;
         "Cache 0 Calls"
       Vary:
       - Origin, Accept-Language, Cookie
