--- a/.pylintrc
+++ b/.pylintrc
@@ -3,4 +3,4 @@ max-line-length=88
 good-names=x1,x2,y1,y2
 
 [MESSAGES CONTROL]
-disable=missing-docstring,too-many-ancestors,too-few-public-methods,bad-continuation,no-else-return,no-member,attribute-defined-outside-init,no-self-use,similarities,import-outside-toplevel,cyclic-import,no-member,no-else-raise,too-many-instance-attributes,too-many-arguments
+disable=missing-docstring,too-many-ancestors,too-few-public-methods,bad-continuation,no-else-return,no-member,attribute-defined-outside-init,no-self-use,similarities,import-outside-toplevel,cyclic-import,no-member,no-else-raise,too-many-instance-attributes,too-many-arguments,ungrouped-imports,useless-object-inheritance
